# in2lambda

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Q1.json  Q2.json  Q3.json  Q4.json  Q5.json  Q6.json  Q7.json  Q8.json  README.md  dockerfile  jsonconvert.py  katex_convert.py  legacy.py  main.py  markdown2lambda.py  minimal_template.json  parsing.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml  docker-publish.yml  test.yml
.metals/: metals.lock.db
app/: example.tex  main.py  question.py
app/data/: minimal_template.json
app/json_convert/: json_convert.py
app/katex_convert/: delete_list.txt  katex_convert.py  replace_list.txt
conversion2025/: README.md  assumptions.txt  converter_struggles.txt  line_parser.lua  mathpix_to_llm_to_JSON.ipynb  mathpix_to_llm_to_in2lambda_to_JSON.ipynb  mathpix_to_llm_to_llm_to_JSON.ipynb  mathpix_to_llm_to_procedural_to_JSON.ipynb  mathpix_to_llm_with_lines_to_api.ipynb  out.json  out2.json  pandoc_testing.txt  pandoc_testingv2.txt  requirements.txt  sandbox_mathpix_2025.ipynb  testing.ipynb  testing.json  testing.md  testing_and_prototype.ipynb  todo.txt  validator.py  validator_classes.py  validator_tests.py
conversion2025/conversion_content/: .gitkeep
conversion2025/tools/validator/: README.md  build.sbt  validator_pandoc.cabal
conversion2025/tools/validator/app/: Main.hs
conversion2025/tools/validator/src/main/scala/: Main.scala  lexer.scala  parser.scala  semantic.scala  syntax.scala
conversion2025/tools/validator/src/test/scala/: MainTest.scala
docs/: requirements.txt
docs/source/: conf.py  filters.py  index.md  quickstart.md
in2lambda/: main.py
in2lambda/api/: module.py  set.py  visibility_status.py
in2lambda/filters/: markdown.py
in2lambda/json_convert/: json_convert.py  minimal_template.json  minimal_template_question.json
markdown2lambda/: README.txt  markdown2lambda.py  template.md
stubs/panflute/: __init__.pyi  autofilter.pyi  base.pyi  containers.pyi  elements.pyi  io.pyi  table_elements.pyi  tools.pyi  utils.pyi
tex2lambda/: __init__.py  katex_convert.py  main.py  question.py
tex2lambda/api/: module.py  question.py
tex2lambda/filters/: _markdown.py  fourier.py  linear.py  linear2.py  materials.py
tex2lambda/json_convert/: json_convert.py  (+1 more)
wizard/: OandW_sample_PS1_Complete.tex  OandW_sample_PS1_Complete_output_test.md  README.md  high_level.py  mathpix_call.py  problemsA_v2.7.tex  problemsA_v2.7_output_test.md  requirements.txt  sandbox.ipynb  sandbox_answers.ipynb  sandbox_mathpix.ipynb  sandbox_mathpix_2025.ipynb  to_question.py
(+49 files in other folders)
