[tool.poetry]
name = "tex2lambda"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
include = ["tex2lambda/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
panflute = "^2.3.0"
rich-click = "^1.6.1"

[tool.poetry.scripts]
tex2lambda = "tex2lambda.main:cli"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pydocstyle = "^6.3.0"

[tool.mypy]
# panflute is missing type hints
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
