[tool.poetry]
name = "tex2lambda"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
include = ["tex2lambda/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
panflute = "^2.3.0"
rich-click = "^1.6.1"
beartype = "^0.15.0"

[tool.poetry.scripts]
tex2lambda = "tex2lambda.main:cli"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"

[tool.poetry.group.docs.dependencies]
furo = "^2023.7.26"
myst-parser = "^2.0.0"
sphinx = "^7.1.2"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.5.0"
sphinx-click = "^4.4.0"
sphinxext-opengraph = "^0.8.2"

[tool.mypy]
# panflute is missing type hints
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
