cabal-version:       >=1.10
name:                validator
version:             0.1.0.0
build-type:          Simple

executable validator
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       
    base >=4.7 && <5,
    text >=1.2 && <3,
    pandoc >=2.19 && <4,
    pandoc-types >=1.22 && <2
  default-language:    Haskell2010
  ghc-options:         -Wall -O2